--- a/react-firebase-login/src/App.css
+++ b/react-firebase-login/src/App.css
@@ -1,7 +1,16 @@
 .App {
   text-align: center;
+  justify-content: center;
+  display: flex;
+  padding: 90px 0 90px 0;
 }
-
+.sub-main {
+    display: flex;
+    justify-content: center;
+    height:550px;
+    width: 35%;
+    box-shadow: 11px 12px 13px 12px ;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
