--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -15,11 +15,19 @@ code {
 .App {
   text-align: center;
   justify-content: center;
-  margin        : 0;
   padding       : 0;
-  display       : grid;
-  place-content : center;
   min-height    : 100vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.AuthForm {
+  text-align: center;
+  justify-content: center;
+  padding       : 0;
+  min-height    : 100vh;
+  margin-left: auto;
+  margin-right: auto; 
 }
 
 p {
@@ -35,7 +43,7 @@ p {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-
+/* navbar stylesheet */
 #wrapper {
   overflow-x: hidden;
 }
@@ -84,59 +92,4 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 .AuthForm .form-control {
   width: 40%;
   margin-left: 30%;
-}
-
-/* map stylesheet */
-
-.map-h2 {
-  text-transform: uppercase;
-  font-size: 1rem;
-  padding: 20px;
-  padding-left: 10px;
-  text-align: center;
-}
-
-.google-map {
-  width: 100%;
-  height: 60vh;
-}
-
-.pin {
-  display: flex;
-  align-items: center;
-  width: 180px;
-  color: var(--main-blue);
-}
-
-.pin-icon {
-  font-size: 4rem;
-}
-
-.pin-text {
-  font-size: 1.3em;
-}
-
-@media screen and (min-width: 799px) {
-  .google-map {
-    height: 80vh;
-  }
-
-  .map-h2 {
-    font-size: 1.3rem;
-    font-weight: 400;
-  }
-
-  .pin {
-    width: 15vw;
-  }
-
-  .pin-icon {
-    font-size: 10vw;
-  }
-}
-
-/* Reviews */
-.individualReview {
-  border: 1px solid black;
-  margin: 10px;
 }
