--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -93,3 +93,17 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   width: 40%;
   margin-left: 30%;
 }
+
+.App img {
+  border-radius: 5%;
+  max-width: 50%;
+}
+
+#syncPage {
+  text-align: start;
+  justify-content: left;
+  padding       : 0;
+  min-height    : 100vh;
+  margin-left: auto;
+  margin-right: auto;
+}
