--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -107,3 +107,9 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   margin-left: auto;
   margin-right: auto;
 }
+
+.Avatar {
+  margin-left: 30vw;
+  min-width: 25vw;
+  min-height: 25vh;
+}
