--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -113,3 +113,11 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   min-width: 25vw;
   min-height: 25vh;
 }
+
+.startDiv {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
